# secure-enterprise-knowledge-agent

./: .gitignore  db_data.txt  docker-compose.yml  step2_project.txt  step4_project.txt
ai-service/: pyproject.toml  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: chat.py  upload.py
ai-service/app/chunking/: splitter.py
ai-service/app/embeddings/: embedding.py
ai-service/app/loaders/: docx_loader.py  pdf_loader.py
ai-service/app/services/: rag_service.py
ai-service/app/vectordb/: chroma.py
backend/: migrate.js  package.json
backend/src/: app.js  server.js
backend/src/clients/: ai.client.js
backend/src/config/: swagger.js
backend/src/controllers/: ai.controller.js  auth.controller.js  company.controller.js  employee.controller.js  health.controller.js  project.controller.js
backend/src/middleware/: auth.middleware.js
backend/src/routes/: ai.routes.js  company.routes.js  employee.routes.js  health.routes.js  project.routes.js
backend/src/services/: company.service.js  employee.service.js  health.service.js  project.service.js
frontend/: package.json
frontend/src/: App.jsx  index.css
